# evePiCalculator

./: .gitignore  Material.py  README.md  main.py  pi_requirements.json  pyproject.toml
data/: dependency_graph.json  filtered_types.csv  id_name_map.json  name_id_map.json  pi_dependency_graph.json  pi_materials.json  pi_materials.pkl  types_with_icons.csv
src/: Material.py  __init__.py  directed_acyclic_graph.py  helper_functions.py  main.py  material.py  material_model.py  material_operations.py  material_ops.py  pi_calculator.py  pi_calculator_cli.py  typeDefs.py  utils.py
