[project]
name = "evepicalculator"
version = "1.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = []

[dependency-groups]
dev = [
    "black>=25.1.0",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "poetry>=2.1.3",
    "ruff>=0.9.5",
]

[tool.poetry]
packages = [
    {include = "src"}
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
